--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="player">
-            <video id="video" poster="./images/poster.jpg" muted src="./videos/lofi.mp4" width="400"></video>
+            <video id="video" poster="./images/poster.jpg" muted src="./videos/trailer.mp4" width="400"></video>
             <div class="player-overlay">
                 <h2 class="player-title">Musica para programar</h2>
                 <div class="player-actions">
